[package]
name = "hi3-fps-unlocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
winreg = "0.50.0"
serde_json = "1.0"
hex = "0.4"
termcolor = "1.2.0"
